Missing home module

--- a/experiment/experiment.cabal
+++ b/experiment/experiment.cabal
@@ -16,6 +16,8 @@ library
                    LCS,
                    EquivalenceUtil,
                    
+                   InternalCategory,
+
                    Math.AdditionChain,
                    Math.Combinatorics,
                    Math.ContingencyTable,
