--- a/execs/execs.cabal
+++ b/execs/execs.cabal
@@ -24,6 +24,7 @@ executable conc
   build-depends:       base >=4.14
                      , parallel
                      , stm
+                     , time
   default-language:    Haskell2010
   ghc-options:         -O2 -Wall -threaded -rtsopts
 
